# kaleidoscope

./: .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
src/ast/: binary.h  call.h  expression.h  function.h  number.h  prototype.h  variable.h
test/: CMakeLists.txt  ast-test.cpp  lexer-test.cpp  parser-test.cpp
